feat: add blood_unit listing and management